<resources>
    <string name="app_name">Real Estate Manager</string>
    <string name="disconnect">Disconnect</string>
    <string name="first_name">FirstName</string>
    <string name="last_name">LastName</string>
    <!-- to toggle the open close button of the navigation drawer -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="search">Search</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="number_of_rooms">Number of rooms</string>
    <string name="surface">Surface *</string>
    <string name="number_of_bathrooms">Number of bathrooms</string>
    <string name="number_of_bedrooms">Number of bedrooms</string>
    <string name="desc_close_details">desc close details</string>
    <string name="location">Location</string>
    <string name="dsc_image_item">dsc_image_item</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="exit">Exit</string>
    <string name="not_connected">Not connected</string>
    <string name="connect">Connect</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="add_photo">add photo</string>
    <string name="type">type *</string>
    <string name="price">price *</string>
    <string name="room">room *</string>
    <string name="address_">address *</string>
    <string name="address">address</string>
    <string name="interesting_point">interesting point *</string>
    <string name="estate_sold">estate sold</string>
    <string name="start_sale">start sale</string>
    <string name="status">status</string>
    <string name="agent">agent</string>
    <string name="description">description *</string>
    <string name="enter_name">enter name</string>
    <string name="enter_email">enter email</string>
    <string name="details_fragment">details fragment</string>
    <string name="media">Media</string>
    <string name="delete">delete</string>
    <string name="update">update</string>
    <string name="select_agent">agent in charge</string>
    <string name="add_photo_from_folder">add photo from folder</string>
    <string name="autocomplete_hint">research address</string>
    <string name="picture">picture</string>
    <string name="add_picture">add picture</string>
    <string name="select_resource_for_add_picture">select resource for add picture</string>
    <string name="select_address">select address *</string>
    <string name="description_details">description</string>
    <string name="type_details">type :</string>
    <string name="price_details">price :</string>
    <string name="surface_details">surface :</string>
    <string name="room_details">room :</string>
    <string name="interesting_point_details">interesting point :</string>
    <string name="sold_details">Sold on :</string>
    <string name="on_sale_date_details">on-sale date :</string>
    <string name="agent_in_charge_details">agent in charge :</string>
    <string name="change_unity_monetary">Change unity monetary</string>
    <string name="dollars">Dollars</string>
    <string name="euro">Euro</string>
    <string name="change_color_of_your_application">Change color of your application</string>
    <string name="filter_by">Filter by</string>
    <string name="min">min</string>
    <string name="max">max</string>
    <string name="enter_interesting_point">Enter interesting point</string>
    <string name="date_of_sale">date of sale :</string>
    <string name="date">date</string>
    <string name="sold_date">sold date :</string>
    <string name="address_details">address :</string>
    <string name="number_of_picture_min">min number of picture</string>
    <string name="town">town</string>
    <string name="display_estates_filtered">display estates filtered</string>
    <string name="_0">0</string>
    <string name="map">map</string>
    <string name="please_enter_all_information">please enter all information</string>
    <string name="you_need_to_be_logged_in_for_create_an_estate">You need to be logged in for create an estate</string>
    <string name="you_need_to_be_logged_in_for_edit_an_estate">You need to be logged in for edit an estate</string>
    <string name="real_estate_list_is_empty">real estate list is empty</string>
    <string name="start">start</string>
    <string name="end">end</string>
    <string name="enter_type">enter type</string>
    <string name="loan_simulator">Loan simulator</string>
    <string name="calculate">Calculate</string>
    <string name="enter_loan_term">Enter loan term</string>
    <string name="loan_term_years">Loan term (years):</string>
    <string name="enter_interest_rate">Enter interest rate</string>
    <string name="interest_rate">Interest rate:</string>
    <string name="enter_loan_amount">Enter loan amount</string>
    <string name="loan_amount">Loan amount:</string>
    <string name="generate_data_agent_for_example">Generate data agent for example</string>
    <string name="generate_data_estate_for_example">Generate data estate for example</string>
    <string name="generate_data_picture_for_example">Generate data picture for example</string>
</resources>
