<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp">

    <ImageView
        android:id="@+id/img_simulator_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/desc_close_details"
        android:src="@drawable/baseline_arrow_back_ios_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewLoanAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:layout_marginStart="3dp"
        android:text="@string/loan_amount"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/img_simulator_back"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/editTextLoanAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_loan_amount"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/textViewLoanAmount"
        app:layout_constraintLeft_toLeftOf="parent"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textViewInterestRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="16dp"
        android:text="@string/interest_rate"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/editTextLoanAmount"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/editTextInterestRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_interest_rate"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/textViewInterestRate"
        app:layout_constraintLeft_toLeftOf="parent"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textViewLoanTerm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="16dp"
        android:text="@string/loan_term_years"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/editTextInterestRate"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/editTextLoanTerm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_loan_term"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/textViewLoanTerm"
        app:layout_constraintLeft_toLeftOf="parent"
        android:autofillHints="" />

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:paddingHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/calculate"
        app:layout_constraintTop_toBottomOf="@id/editTextLoanTerm"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="16dp"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/buttonCalculate"
        app:layout_constraintLeft_toLeftOf="parent"/>




</androidx.constraintlayout.widget.ConstraintLayout>